Fuck capital letters

--- a/Botches/clock/index.html
+++ b/Botches/clock/index.html
@@ -78,7 +78,7 @@
     var settingsVisible = false;
 
     function loadStorage(){
-      timeZone = localStorage.getItem('timezone') || "America/Anchorage";
+      timeZone = localStorage.getItem('timeZone') || "America/Anchorage";
       fuzzy = localStorage.getItem('fuzzy') == "true"; //Set as bool
     }
 
