--- a/Botches/skyrim/index.html
+++ b/Botches/skyrim/index.html
@@ -195,12 +195,12 @@
                 Ingredient
               </td><td>
 
-                  Ingredient
-                </td>
-              </tr>
-            </thead>
-            <tbody>
-          <tr><td>Wheat </td><td> Giant’s Toe </td><td> Creep Cluster </td><td> 1250
+                Ingredient
+              </td>
+            </tr>
+          </thead>
+          <tbody>
+        <tr><td>Wheat </td><td> Giant’s Toe </td><td> Creep Cluster </td><td> 1250
         </tr><tr>Giant's Toe </td><td> Wheat </td><td> 950
         </tr><tr>Blue Mountain Flower </td><td> Hanging Moss </td><td> Hagraven Feathers </td><td> 724
         </tr><tr>Deathbell </td><td> Salt Pile </td><td> Taproot </td><td> 707
@@ -278,7 +278,7 @@
       <script src="../../tools/datatables/datatables.min.js"></script>
       <script>
         $(document).ready(function() {
-          let table = $('#datatable').DataTable({
+          let table = $('#potionTable').DataTable({
             paging: false,
             sDom: "lrtip"
           });
