Adding missing TR

--- a/Botches/skyrim/index.html
+++ b/Botches/skyrim/index.html
@@ -200,7 +200,7 @@
             </tr>
           </thead>
           <tbody>
-        <tr><td>Wheat </td><td> Giant’s Toe </td><td> Creep Cluster </td><td> 1250
+        <tr><td>Wheat </td><td> Giant’s Toe </td><td> Creep Cluster </td><td> 1250</td>
         </tr><tr>Giant's Toe </td><td> Wheat </td><td> 950
         </tr><tr>Blue Mountain Flower </td><td> Hanging Moss </td><td> Hagraven Feathers </td><td> 724
         </tr><tr>Deathbell </td><td> Salt Pile </td><td> Taproot </td><td> 707
