--- a/Botches/skyrim/index.html
+++ b/Botches/skyrim/index.html
@@ -280,7 +280,7 @@
         $(document).ready(function() {
           let table = $('#potionTable').DataTable({
             paging: false,
-            sDom: "lrtip"
+            sDom: "lfrtip"
           });
         } );
         console.log(table);
