--- a/Botches/skyrim/index.html
+++ b/Botches/skyrim/index.html
@@ -201,75 +201,75 @@
           </thead>
           <tbody>
         <tr><td>Wheat </td><td> Giant’s Toe </td><td> Creep Cluster </td><td> 1250</td>
-        </tr><tr>Giant's Toe </td><td> Wheat </td><td> 950
-        </tr><tr>Blue Mountain Flower </td><td> Hanging Moss </td><td> Hagraven Feathers </td><td> 724
-        </tr><tr>Deathbell </td><td> Salt Pile </td><td> Taproot </td><td> 707
-        </tr><tr>Blue Mountain Flower </td><td> Hanging Moss </td><td> Butterfly Wing </td><td> 644
-        </tr><tr>Fire Salts </td><td> Salt Pile </td><td> 1 of (Deathbell, Moon Sugar or Creep Cluster) </td><td> 631
-        </tr><tr>Creep Cluster </td><td> Scaly Pholiata </td><td> Giant's Toe </td><td> 618
-        </tr><tr>Blue Mountain Flower </td><td> Hanging Moss </td><td> Nordic Barnacle </td><td> 612
-        </tr><tr>Blue Mountain Flower </td><td> Hanging Moss </td><td> Chaurus Eggs </td><td> 609
-        </tr><tr>White Cap </td><td> Ice Wraith Teeth </td><td> Vampire Dust </td><td> 597
-        </tr><tr>Hanging Moss </td><td> Bear Claws </td><td> Chicken Egg </td><td> 591
-        </tr><tr>White Cap </td><td> Ice Wraith Teeth </td><td> Nirnroot </td><td> 558
-        </tr><tr>Scaly Pholiata </td><td> Taproot </td><td> Creep Cluster </td><td> 557
-        </tr><tr>Blue Mountain Flower </td><td> Hanging Moss </td><td> 529
-        </tr><tr>Hanging Moss </td><td> Wheat </td><td> Nightshade </td><td> 529
-        </tr><tr>Frost Salts </td><td> Moon Sugar </td><td> 1 of (Fire Salts or Taproot) </td><td> 503
-        </tr><tr>Spriggan Sap </td><td> Nordic Barnacle </td><td> Hanging Moss </td><td> 486
-        </tr><tr>Hanging Moss </td><td> Spider Egg </td><td> 1 of (Blisterwort, Bone Meal or Cyrodilic Spadetail) </td><td> 482
-        </tr><tr>Scaly Pholiata </td><td> Taproot </td><td> Jazbay Grapes </td><td> 478
-        </tr><tr>Swamp Fungal Pod </td><td> Imp Stool </td><td> 476
-        </tr><tr>Dragon's Tongue </td><td> Fly Amanita </td><td> Troll Fat </td><td> 471
-        </tr><tr>Luna Moth Wing </td><td> Chaurus Eggs </td><td>463
-        </tr><tr>Canis Root </td><td> 1 of (Imp Stool or Swamp Fungal Pod) </td><td> 445
-        </tr><tr>Hanging Moss </td><td> Pine Thrush Egg </td><td> Spider Egg </td><td> 444
-        </tr><tr>Dwarven Oil </td><td> Taproot </td><td> Dragon's Tongue </td><td> 442
-        </tr><tr>Nightshade </td><td> Chicken's Egg </td><td> 414
-        </tr><tr>Hanging Moss </td><td> Spriggan Sap </td><td> 404
-        </tr><tr>Hanging Moss </td><td> Glow Dust </td><td> 400
-        </tr><tr>Glow Dust </td><td> Spider Egg </td><td> Hanging Moss </td><td> 400
-        </tr><tr>Dwarven Oil </td><td> Salt Pile </td><td> Grass Pod </td><td> 397
-        </tr><tr>Lavender </td><td> Garlic </td><td> Vampire Dust </td><td> 388
-        </tr><tr>Silverside Perch </td><td> Wheat </td><td> Blue Mountain Flower </td><td> 382
-        </tr><tr>Creep Cluster </td><td> Scaly Pholiata </td><td> 381
-        </tr><tr>Taproot </td><td> Jazbay Grapes </td><td> Creep Cluster </td><td> 377
-        </tr><tr>Hanging Moss </td><td> Wheat </td><td> Skeever Tail </td><td> 368
-        </tr><tr>Any 2 of (Deathbell, Large Antlers, River Betty or Salt Pile) </td><td> 367
-        </tr><tr>Tundra Cotton </td><td> Bleeding Crown </td><td>Void Salts </td><td> 358
-        </tr><tr>Chicken Egg </td><td> Bear Claws </td><td> Nightshade </td><td> 349
-        </tr><tr>Namira's Rot </td><td> Nordic Barnicle </td><td> 343
-        </tr><tr>Fly Amanita </td><td> Troll Fat </td><td> 341
-        </tr><tr>Salt </td><td> 1 of (Jazbay Grapes or Taproot) </td><td> 339
-        </tr><tr>Jasbay Grapes </td><td> Taproot </td><td> 339
-        </tr><tr>Glow Dust </td><td> Spider Egg </td><td> 334
-        </tr><tr>Bone Meal </td><td> Troll Fat </td><td> Dragon's Tongue </td><td> 319
-        </tr><tr>Saber Cat Tooth </td><td> Thistle Branch </td><td> Charred Skeever Hide </td><td> 310
-        </tr><tr>Orange Dartwing </td><td> Slaughterfish Egg </td><td> 308
-        </tr><tr>Frost Mirriam </td><td> Purple Mountain Flower </td><td> 302
-        </tr><tr>Dragon's Tongue </td><td> Fly Amanita </td><td> 302
-        </tr><tr>Fire Salts </td><td> 1 of (Moon Sugar or Taproot) </td><td> 301
-        </tr><tr>Moon Sugar </td><td> Taproop </td><td> 301
-        </tr><tr>Namira’s Root </td><td> Nordic Barnacle </td><td> 289
-        </tr><tr>Garlic </td><td> Slaughterfish Egg </td><td> 286
-        </tr><tr>Purple Mountain Flower </td><td> Torchbug </td><td> Silverside Perch </td><td> 278
-        </tr><tr>Dragon's Tongue </td><td> Void Salts </td><td> Tundra Cotton </td><td> 266
-        </tr><tr>Garlic </td><td> 1 of (Juniper Berries or Moon Sugar) </td><td> 264
-        </tr><tr>Fly Amanita </td><td> Scaly Pholiata </td><td> 264
-        </tr><tr>Blue Mountain Flower </td><td> Swamp </td><td> Wheat </td><td> 264
-        </tr><tr>Tundra Cotton </td><td> Bleeding Crown </td><td> 254
-        </tr><tr>Large Antlers </td><td> Purple Mountain Flower </td><td> Torchbug </td><td> 253
-        </tr><tr>Silverside Perch </td><td> Jazbay Grapes </td><td> 245
-        </tr><tr>Canis Root </td><td> Rock Warbler Egg </td><td> 244
-        </tr><tr>Frost Salts </td><td> Moon Sugar </td><td> 239
-        </tr><tr>Bone Meal </td><td> Blisterwort </td><td> Troll Fat </td><td> 235
-        </tr><tr>Lavender </td><td> Frost Salts </td><td> Torchbug Thorax </td><td> 229
-        </tr><tr>Elves Ear </td><td> Fire Salts </td><td> 227
-        </tr><tr>Dragon's Tongue </td><td> Tundra Cotton </td><td> Scaly Pholiata </td><td> 222
-        </tr><tr>Scaly Pholiata </td><td> Taproot </td><td> 214
-        </tr><tr>Slaughterfish Scales </td><td> Thistle Branch </td><td> 210
-        </tr><tr>Dragon's Tongue </td><td> Tundra Cotton </td><td> Snowberries </td><td> 209
-        </tr><tr>Charred Skeever Hide </td><td> Mudcrab Chitin </td><td> Vampire Dust </td><td> 209
+        </td></tr><tr>Giant's Toe </td><td> Wheat </td><td> 950
+        </td></tr><tr>Blue Mountain Flower </td><td> Hanging Moss </td><td> Hagraven Feathers </td><td> 724
+        </td></tr><tr>Deathbell </td><td> Salt Pile </td><td> Taproot </td><td> 707
+        </td></tr><tr>Blue Mountain Flower </td><td> Hanging Moss </td><td> Butterfly Wing </td><td> 644
+        </td></tr><tr>Fire Salts </td><td> Salt Pile </td><td> 1 of (Deathbell, Moon Sugar or Creep Cluster) </td><td> 631
+        </td></tr><tr>Creep Cluster </td><td> Scaly Pholiata </td><td> Giant's Toe </td><td> 618
+        </td></tr><tr>Blue Mountain Flower </td><td> Hanging Moss </td><td> Nordic Barnacle </td><td> 612
+        </td></tr><tr>Blue Mountain Flower </td><td> Hanging Moss </td><td> Chaurus Eggs </td><td> 609
+        </td></tr><tr>White Cap </td><td> Ice Wraith Teeth </td><td> Vampire Dust </td><td> 597
+        </td></tr><tr>Hanging Moss </td><td> Bear Claws </td><td> Chicken Egg </td><td> 591
+        </td></tr><tr>White Cap </td><td> Ice Wraith Teeth </td><td> Nirnroot </td><td> 558
+        </td></tr><tr>Scaly Pholiata </td><td> Taproot </td><td> Creep Cluster </td><td> 557
+        </td></tr><tr>Blue Mountain Flower </td><td> Hanging Moss </td><td> 529
+        </td></tr><tr>Hanging Moss </td><td> Wheat </td><td> Nightshade </td><td> 529
+        </td></tr><tr>Frost Salts </td><td> Moon Sugar </td><td> 1 of (Fire Salts or Taproot) </td><td> 503
+        </td></tr><tr>Spriggan Sap </td><td> Nordic Barnacle </td><td> Hanging Moss </td><td> 486
+        </td></tr><tr>Hanging Moss </td><td> Spider Egg </td><td> 1 of (Blisterwort, Bone Meal or Cyrodilic Spadetail) </td><td> 482
+        </td></tr><tr>Scaly Pholiata </td><td> Taproot </td><td> Jazbay Grapes </td><td> 478
+        </td></tr><tr>Swamp Fungal Pod </td><td> Imp Stool </td><td> 476
+        </td></tr><tr>Dragon's Tongue </td><td> Fly Amanita </td><td> Troll Fat </td><td> 471
+        </td></tr><tr>Luna Moth Wing </td><td> Chaurus Eggs </td><td>463
+        </td></tr><tr>Canis Root </td><td> 1 of (Imp Stool or Swamp Fungal Pod) </td><td> 445
+        </td></tr><tr>Hanging Moss </td><td> Pine Thrush Egg </td><td> Spider Egg </td><td> 444
+        </td></tr><tr>Dwarven Oil </td><td> Taproot </td><td> Dragon's Tongue </td><td> 442
+        </td></tr><tr>Nightshade </td><td> Chicken's Egg </td><td> 414
+        </td></tr><tr>Hanging Moss </td><td> Spriggan Sap </td><td> 404
+        </td></tr><tr>Hanging Moss </td><td> Glow Dust </td><td> 400
+        </td></tr><tr>Glow Dust </td><td> Spider Egg </td><td> Hanging Moss </td><td> 400
+        </td></tr><tr>Dwarven Oil </td><td> Salt Pile </td><td> Grass Pod </td><td> 397
+        </td></tr><tr>Lavender </td><td> Garlic </td><td> Vampire Dust </td><td> 388
+        </td></tr><tr>Silverside Perch </td><td> Wheat </td><td> Blue Mountain Flower </td><td> 382
+        </td></tr><tr>Creep Cluster </td><td> Scaly Pholiata </td><td> 381
+        </td></tr><tr>Taproot </td><td> Jazbay Grapes </td><td> Creep Cluster </td><td> 377
+        </td></tr><tr>Hanging Moss </td><td> Wheat </td><td> Skeever Tail </td><td> 368
+        </td></tr><tr>Any 2 of (Deathbell, Large Antlers, River Betty or Salt Pile) </td><td> 367
+        </td></tr><tr>Tundra Cotton </td><td> Bleeding Crown </td><td>Void Salts </td><td> 358
+        </td></tr><tr>Chicken Egg </td><td> Bear Claws </td><td> Nightshade </td><td> 349
+        </td></tr><tr>Namira's Rot </td><td> Nordic Barnicle </td><td> 343
+        </td></tr><tr>Fly Amanita </td><td> Troll Fat </td><td> 341
+        </td></tr><tr>Salt </td><td> 1 of (Jazbay Grapes or Taproot) </td><td> 339
+        </td></tr><tr>Jasbay Grapes </td><td> Taproot </td><td> 339
+        </td></tr><tr>Glow Dust </td><td> Spider Egg </td><td> 334
+        </td></tr><tr>Bone Meal </td><td> Troll Fat </td><td> Dragon's Tongue </td><td> 319
+        </td></tr><tr>Saber Cat Tooth </td><td> Thistle Branch </td><td> Charred Skeever Hide </td><td> 310
+        </td></tr><tr>Orange Dartwing </td><td> Slaughterfish Egg </td><td> 308
+        </td></tr><tr>Frost Mirriam </td><td> Purple Mountain Flower </td><td> 302
+        </td></tr><tr>Dragon's Tongue </td><td> Fly Amanita </td><td> 302
+        </td></tr><tr>Fire Salts </td><td> 1 of (Moon Sugar or Taproot) </td><td> 301
+        </td></tr><tr>Moon Sugar </td><td> Taproop </td><td> 301
+        </td></tr><tr>Namira’s Root </td><td> Nordic Barnacle </td><td> 289
+        </td></tr><tr>Garlic </td><td> Slaughterfish Egg </td><td> 286
+        </td></tr><tr>Purple Mountain Flower </td><td> Torchbug </td><td> Silverside Perch </td><td> 278
+        </td></tr><tr>Dragon's Tongue </td><td> Void Salts </td><td> Tundra Cotton </td><td> 266
+        </td></tr><tr>Garlic </td><td> 1 of (Juniper Berries or Moon Sugar) </td><td> 264
+        </td></tr><tr>Fly Amanita </td><td> Scaly Pholiata </td><td> 264
+        </td></tr><tr>Blue Mountain Flower </td><td> Swamp </td><td> Wheat </td><td> 264
+        </td></tr><tr>Tundra Cotton </td><td> Bleeding Crown </td><td> 254
+        </td></tr><tr>Large Antlers </td><td> Purple Mountain Flower </td><td> Torchbug </td><td> 253
+        </td></tr><tr>Silverside Perch </td><td> Jazbay Grapes </td><td> 245
+        </td></tr><tr>Canis Root </td><td> Rock Warbler Egg </td><td> 244
+        </td></tr><tr>Frost Salts </td><td> Moon Sugar </td><td> 239
+        </td></tr><tr>Bone Meal </td><td> Blisterwort </td><td> Troll Fat </td><td> 235
+        </td></tr><tr>Lavender </td><td> Frost Salts </td><td> Torchbug Thorax </td><td> 229
+        </td></tr><tr>Elves Ear </td><td> Fire Salts </td><td> 227
+        </td></tr><tr>Dragon's Tongue </td><td> Tundra Cotton </td><td> Scaly Pholiata </td><td> 222
+        </td></tr><tr>Scaly Pholiata </td><td> Taproot </td><td> 214
+        </td></tr><tr>Slaughterfish Scales </td><td> Thistle Branch </td><td> 210
+        </td></tr><tr>Dragon's Tongue </td><td> Tundra Cotton </td><td> Snowberries </td><td> 209
+        </td></tr><tr>Charred Skeever Hide </td><td> Mudcrab Chitin </td><td> Vampire Dust </td><td> 209
         </td>
         </tr>
       </tbody></table>
