Updated and fixed ingredient table

--- a/Botches/skyrim/index.html
+++ b/Botches/skyrim/index.html
@@ -204,45 +204,86 @@
    </thead>
    <tbody>
       <tr>
-         <td>Wheat </td>
-         <td> Giant’s Toe </td>
-         <td> Creep Cluster </td>
-         <td> 1250</td>
+         <td>
+           Wheat
+         </td>
+         <td>
+           Giant’s Toe
+         </td>
+         <td>
+           Creep Cluster
+         </td>
+         <td>
+           1250
+         </td>
          </td>
       </tr>
       <tr>
-         <td>Giant's Toe </td>
-         <td> Wheat </td>
+         <td>
+           Giant's Toe
+         </td>
+         <td>
+           Wheat
+         </td>
          <td></td>
-         <td> 950
+         <td>
+           950
          </td>
       </tr>
       <tr>
-         <td>Blue Mountain Flower </td>
-         <td> Hanging Moss </td>
-         <td> Hagraven Feathers </td>
-         <td> 724
+         <td>
+           Blue Mountain Flower
+         </td>
+         <td>
+           Hanging Moss
+         </td>
+         <td>
+           Hagraven Feathers
+         </td>
+         <td>
+           724
          </td>
       </tr>
       <tr>
-         <td>Deathbell </td>
-         <td> Salt Pile </td>
-         <td> Taproot </td>
-         <td> 707
+         <td>
+           Deathbell
+         </td>
+         <td>
+           Salt Pile
+         </td>
+         <td>
+           Taproot
+         </td>
+         <td>
+           707
          </td>
       </tr>
       <tr>
-         <td>Blue Mountain Flower </td>
-         <td> Hanging Moss </td>
-         <td> Butterfly Wing </td>
-         <td> 644
+         <td>
+           Blue Mountain Flower
+         </td>
+         <td>
+           Hanging Moss
+         </td>
+         <td>
+           Butterfly Wing
+         </td>
+         <td>
+           644
          </td>
       </tr>
       <tr>
-         <td>Fire Salts </td>
-         <td> Salt Pile </td>
-         <td> 1 of (Deathbell, Moon Sugar or Creep Cluster) </td>
-         <td> 631
+         <td>
+           Fire Salts
+         </td>
+         <td>
+           Salt Pile
+         </td>
+         <td>
+           1 of (Deathbell, Moon Sugar or Creep Cluster)
+         </td>
+         <td>
+           631
          </td>
       </tr>
       <tr>
@@ -375,7 +416,6 @@
          <td>Dwarven Oil </td>
          <td> Taproot </td>
          <td> Dragon's Tongue </td>
-         <td></td>
          <td> 442
          </td>
       </tr>
