--- a/Botches/skyrim/index.html
+++ b/Botches/skyrim/index.html
@@ -738,6 +738,52 @@
            </tbody>
         </table>
       </div>
+      <hr />
+      <div id="HOMM" style="margin-bottom: 400px;">
+        <table style="background-color:#CFCFE6; border: 1px solid black; float:right" cellspacing="0" cellpadding="3" border="0">
+          <tbody><tr style="color: white; background-color:#21316B;">
+          <th>Amount
+          </th>
+          <th>Range
+          </th></tr>
+          <tr>
+          <td style="color white">Few</td>
+          <td align="center">1–4
+          </td></tr>
+          <tr>
+          <td>Several</td>
+          <td align="center">5–9
+          </td></tr>
+          <tr>
+          <td>Pack</td>
+          <td align="center">10–19
+          </td></tr>
+          <tr>
+          <td>Lots</td>
+          <td align="center">20–49
+          </td></tr>
+          <tr>
+          <td>Horde</td>
+          <td align="center">50–99
+          </td></tr>
+          <tr>
+          <td>Throng</td>
+          <td align="center">100–249
+          </td></tr>
+          <tr>
+          <td>Swarm</td>
+          <td align="center">250–499
+          </td></tr>
+          <tr>
+          <td>Zounds</td>
+          <td align="center">500–999
+          </td></tr>
+          <tr>
+          <td>Legion</td>
+          <td align="center">1000+
+          </td></tr></tbody></table>
+        </div >
+
       <link rel="stylesheet" type="text/css" href="../../tools/datatables/datatables.min.css">
       <script src="../../tools/datatables/datatables.min.js"></script>
       <script>
